[package]
name = "drawbridge"
version = "0.1.0"
edition = "2024"
description = "Translation layer connecting Rust implementation to C interfaces"

[lib]
name = "aws_lc_rust"
crate-type = ["staticlib"]

[dependencies]
keep = { path = "../keep", version = "0.1.0" }
bailey = { path = "../bailey", version = "0.1.0" }